# su_traffic_participant

./: CMakeLists.txt  README.md  package.xml
src/: DetectionNode.cpp  DetectionNode.hpp  ParticipantInterface.hpp  SuTrafficNode.cpp  SuTrafficNode.hpp  WriterNode.cpp  WriterNode.hpp  main.cpp  make_participant.cpp  manage_participant.cpp  sum_subscriber.cpp  test_single_detection.cpp
