<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>su_traffic_participant</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="txlei@outlook.com">leia</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <!-- <depend>std_msgs</depend> -->
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>rmf_utils</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_traffic_ros2</depend>
  <depend>rmf_traffic_msgs</depend>
  <depend>su_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
